Add memotext glossary

--- a/angularHTMLayout/coffee/property.ng.html
+++ b/angularHTMLayout/coffee/property.ng.html
@@ -1,9 +1,9 @@
 <div>
   <div ng-include src="'../../common/html/coffee/property_description.ng.html'"></div>
 
-  <div class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span ng-click="ext.lookup = !ext.lookup" class="homePage_display_title">{{$root.i18n('property_lookup')} </span>
-    <span ng-click="ext.lookup = !ext.lookup" class="rightExpandButton">
+  <div ng-click="ext.lookup = !ext.lookup" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
+    <span class="homePage_display_title">{{$root.i18n('property_lookup')} </span>
+    <span class="rightExpandButton">
       <span ng-if="ext.lookup === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.lookup !== true">{{$root.i18n('open')}}</span>
       <i ng-if="ext.lookup !== true" class="fa fa-caret-square-o-left expendIcon"></i>
@@ -12,9 +12,9 @@
   </div>
   <div ng-if="ext.lookup === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_lookup.ng.html'"></div>
 
-  <div class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span ng-click="ext.url = !ext.url" class="homePage_display_title">{{$root.i18n('property_url')} </span>
-    <span ng-click="ext.url = !ext.url" class="rightExpandButton">
+  <div ng-click="ext.url = !ext.url" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
+    <span class="homePage_display_title">{{$root.i18n('property_url')} </span>
+    <span class="rightExpandButton">
       <span ng-if="ext.url === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.url !== true">{{$root.i18n('open')}}</span>
       <i ng-if="ext.url !== true" class="fa fa-caret-square-o-left expendIcon"></i>
@@ -23,9 +23,9 @@
   </div>
   <div ng-if="ext.url === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_url.ng.html'"></div>
 
-  <div class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span ng-click="ext.boolean = !ext.boolean" class="homePage_display_title">{{$root.i18n('property_boolean')} </span>
-    <span ng-click="ext.boolean = !ext.boolean" class="rightExpandButton">
+  <div ng-click="ext.boolean = !ext.boolean" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
+    <span class="homePage_display_title">{{$root.i18n('property_boolean')} </span>
+    <span class="rightExpandButton">
       <span ng-if="ext.boolean === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.boolean !== true">{{$root.i18n('open')}}</span>
       <i ng-if="ext.boolean !== true" class="fa fa-caret-square-o-left expendIcon"></i>
@@ -34,9 +34,9 @@
   </div>
   <div ng-if="ext.boolean === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_boolean.ng.html'"></div>
 
-  <div class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span ng-click="ext.numeric = !ext.numeric" class="homePage_display_title">{{$root.i18n('property_numeric')} </span>
-    <span ng-click="ext.numeric = !ext.numeric" class="rightExpandButton">
+  <div ng-click="ext.numeric = !ext.numeric" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
+    <span class="homePage_display_title">{{$root.i18n('property_numeric')} </span>
+    <span class="rightExpandButton">
       <span ng-if="ext.numeric === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.numeric !== true">{{$root.i18n('open')}}</span>
       <i ng-if="ext.numeric !== true" class="fa fa-caret-square-o-left expendIcon"></i>
@@ -45,9 +45,9 @@
   </div>
   <div ng-if="ext.numeric === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_numeric.ng.html'"></div>
 
-  <div class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span ng-click="ext.memo = !ext.memo" class="homePage_display_title">{{$root.i18n('property_memo')} </span>
-    <span ng-click="ext.memo = !ext.memo" class="rightExpandButton">
+  <div ng-click="ext.memo = !ext.memo" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
+    <span class="homePage_display_title">{{$root.i18n('property_memo')} </span>
+    <span class="rightExpandButton">
       <span ng-if="ext.memo === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.memo !== true">{{$root.i18n('open')}}</span>
       <i ng-if="ext.memo !== true" class="fa fa-caret-square-o-left expendIcon"></i>
@@ -56,9 +56,9 @@
   </div>
   <div ng-if="ext.memo === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_memo.ng.html'"></div>
 
-  <div class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span ng-click="ext.hardcoded = !ext.hardcoded" class="homePage_display_title">{{$root.i18n('property_hardcoded')} </span>
-    <span ng-click="ext.hardcoded = !ext.hardcoded" class="rightExpandButton">
+  <div ng-click="ext.hardcoded = !ext.hardcoded" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
+    <span class="homePage_display_title">{{$root.i18n('property_hardcoded')} </span>
+    <span class="rightExpandButton">
       <span ng-if="ext.hardcoded === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.hardcoded !== true">{{$root.i18n('open')}}</span>
       <i ng-if="ext.hardcoded !== true" class="fa fa-caret-square-o-left expendIcon"></i>
