--- a/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
+++ b/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
@@ -13,7 +13,10 @@
     <div class="row-cell row-cell-label">Pop Out :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.popOut" /></div>
   </div>
-
+  <div class="bootstrap-iso rowFlex">
+    <div class="row-cell row-cell-label">{{$root.i18n('favorite')}} :&nbsp;</div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.favorite" /></div>
+  </div>
   <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">{{$root.i18n('groupableTable')}}  :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.groupable" /></div>
