Fav option in custom display string

--- a/angularHTMLayout/customDisplayStringSimulator/customDisplayStringSimulator.ng.html
+++ b/angularHTMLayout/customDisplayStringSimulator/customDisplayStringSimulator.ng.html
@@ -28,11 +28,21 @@
           </tr>
           <tr>
             <th>
+              Favourite &lsaquo;&&rsaquo;
+            </th>
+            <td>&lsaquo;&&rsaquo;</td>
+            <td class="cw-edit-property-value">
+              Will display a favourite icon, you click on it to add/remove the item as favourite
+            </td>
+          </tr>
+          <tr>
+            <th>
               Popout &lsaquo;# #&rsaquo;
             </th>
             <td>&lsaquo;#<span style="color: red;">name of the popout</span>#&rsaquo;</td>
             <td class="cw-edit-property-value">
-              Will display the icon default popout, and when clicking will open the <span style="color: red;">popout</span> if exist
+              Will display the popout icon when clicking will open the default <span style="color: red;">popout</span> if
+              exist
             </td>
           </tr>
           <tr>
@@ -44,6 +54,13 @@
               Will display your <span style="color: blue;">HTML</span> and when clicking will open the <span style="color: red;">popout</span> if
               exist
             </td>
+          </tr>
+          <tr>
+            <th>
+              Favorite &lsaquo;£ £&rsaquo;
+            </th>
+            <td>&lsaquo;@<span style="color: red;">HTML</span>@&rsaquo;</td>
+            <td class="cw-edit-property-value">The <span style="color: red;">HTML</span> will contains the link of your object Page</td>
           </tr>
           <tr>
             <th>
