--- a/angularHTMLayout/coffee/duplicateButton.ng.html
+++ b/angularHTMLayout/coffee/duplicateButton.ng.html
@@ -30,10 +30,14 @@
           ng-if="ng.config.pageWithDuplicateButton.hasOwnProperty(v.cwView)"
           ng-repeat="v in objectpages track by v.cwView"
         >
-          {{v.name}} ({{v.cwView}})</option
-        >
+          {{v.name}} ({{v.cwView}})
+        </option>
       </select>
     </div>
+  </div>
+  <div class="row bootstrap-iso">
+    <div class="row-cell row-cell-label">{{$root.i18n('dupe_anyway')}} :</div>
+    <input type="checkbox" ng-model="ng.config[configSelected].dupeAnyway" />
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('duplicate_button_association_with_main_object')}} :&nbsp;</div>
@@ -44,8 +48,9 @@
           ng-repeat="a in metamodel.objectTypes[views[configSelected].rootObjectType].AssociationTypes | orderBy:'DisplayName'"
           ng-if="a.TargetObjectTypeScriptName.toLowerCase() === views[configSelected].rootObjectType"
           value="{{a.ScriptName.toLowerCase()}}"
-          >{{a.DisplayName}}</option
         >
+          {{a.DisplayName}}
+        </option>
       </select>
     </div>
   </div>
