--- a/angularHTMLayout/coffee/duplicateButton.ng.html
+++ b/angularHTMLayout/coffee/duplicateButton.ng.html
@@ -60,7 +60,10 @@
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width">
       <div class="cell-content-wrapper filter-wrapper propertieslist">
-        <div class="choiceBox" ng-repeat="p in metamodel.objectTypes[views[configSelected].rootObjectType].properties | orderBy:'name'">
+        <div
+          class="choiceBox"
+          ng-repeat="p in objectToArray(metamodel.objectTypes[views[configSelected].rootObjectType].properties)  | orderBy:'name'"
+        >
           <a
             class="btn-add-filter btn page-action"
             ng-class="ng.config[configSelected].propertyScriptNameToExclude.indexOf(p.scriptName) !== -1? ['selected'] : []"
