--- a/angularHTMLayout/coffee/property.ng.html
+++ b/angularHTMLayout/coffee/property.ng.html
@@ -2,7 +2,7 @@
   <div ng-include src="'../../common/html/coffee/property_description.ng.html'"></div>
 
   <div ng-click="ext.lookup = !ext.lookup" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span class="homePage_display_title">{{$root.i18n('property_lookup')} </span>
+    <span class="homePage_display_title">{{$root.i18n('property_lookup')}} </span>
     <span class="rightExpandButton">
       <span ng-if="ext.lookup === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.lookup !== true">{{$root.i18n('open')}}</span>
@@ -13,7 +13,7 @@
   <div ng-if="ext.lookup === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_lookup.ng.html'"></div>
 
   <div ng-click="ext.url = !ext.url" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span class="homePage_display_title">{{$root.i18n('property_url')} </span>
+    <span class="homePage_display_title">{{$root.i18n('property_url')}} </span>
     <span class="rightExpandButton">
       <span ng-if="ext.url === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.url !== true">{{$root.i18n('open')}}</span>
@@ -24,7 +24,7 @@
   <div ng-if="ext.url === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_url.ng.html'"></div>
 
   <div ng-click="ext.boolean = !ext.boolean" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span class="homePage_display_title">{{$root.i18n('property_boolean')} </span>
+    <span class="homePage_display_title">{{$root.i18n('property_boolean')}} </span>
     <span class="rightExpandButton">
       <span ng-if="ext.boolean === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.boolean !== true">{{$root.i18n('open')}}</span>
@@ -35,7 +35,7 @@
   <div ng-if="ext.boolean === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_boolean.ng.html'"></div>
 
   <div ng-click="ext.numeric = !ext.numeric" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span class="homePage_display_title">{{$root.i18n('property_numeric')} </span>
+    <span class="homePage_display_title">{{$root.i18n('property_numeric')}} </span>
     <span class="rightExpandButton">
       <span ng-if="ext.numeric === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.numeric !== true">{{$root.i18n('open')}}</span>
@@ -46,7 +46,7 @@
   <div ng-if="ext.numeric === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_numeric.ng.html'"></div>
 
   <div ng-click="ext.memo = !ext.memo" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span class="homePage_display_title">{{$root.i18n('property_memo')} </span>
+    <span class="homePage_display_title">{{$root.i18n('property_memo')}} </span>
     <span class="rightExpandButton">
       <span ng-if="ext.memo === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.memo !== true">{{$root.i18n('open')}}</span>
@@ -57,7 +57,7 @@
   <div ng-if="ext.memo === true" class="homePage_display_content" ng-include src="'../../common/html/coffee/property_memo.ng.html'"></div>
 
   <div ng-click="ext.hardcoded = !ext.hardcoded" class="nextGenCard cwPropertiesTableHeader CwPropertiesLayoutTableHeader extendableTitle">
-    <span class="homePage_display_title">{{$root.i18n('property_hardcoded')} </span>
+    <span class="homePage_display_title">{{$root.i18n('property_hardcoded')}} </span>
     <span class="rightExpandButton">
       <span ng-if="ext.hardcoded === true">{{$root.i18n('close')}}</span>
       <span ng-if="ext.hardcoded !== true">{{$root.i18n('open')}}</span>
