Fix numeric property

--- a/angularHTMLayout/coffee/property_numeric.ng.html
+++ b/angularHTMLayout/coffee/property_numeric.ng.html
@@ -10,15 +10,15 @@
     <tbody>
       <tr>
         <th class="verySmallCell"></th>
-        <th class="largeMediumCell noWhiteSpace">{{$root.i18n('property')}}</th>
+        <th class="mediumCell noWhiteSpace">{{$root.i18n('property')}}</th>
         <th class="smallCell">{{$root.i18n('min')}}</th>
         <th class="smallCell">{{$root.i18n('max')}}</th>
-        <th class="verySmallCell">{{$root.i18n('unit')}}</th>
-        <th class="verySmallCell">{{$root.i18n('infront')}}</th>
-        <th class="verySmallCell">{{$root.i18n('decimalseparator')}}</th>
-        <th class="verySmallCell">{{$root.i18n('thousandseparator')}}</th>
+        <th class="smallCell">{{$root.i18n('unit')}}</th>
+        <th class="smallCell">{{$root.i18n('infront')}}</th>
+        <th class="smallCell">{{$root.i18n('decimalseparator')}}</th>
+        <th class="smallCell">{{$root.i18n('thousandseparator')}}</th>
         <th class="largeMediumCell">{{$root.i18n('imageUrl')}}</th>
-        <th class="largeMediumCell">{{$root.i18n('Icon')}}</th>
+        <th class="mediumCell">{{$root.i18n('Icon')}}</th>
         <th class="tableCheckbox">{{$root.i18n('colorIcon')}}</th>
         <th class="tableCheckbox">{{$root.i18n('colorValue')}}</th>
         <th class="tableCheckbox"></th>
