--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -113,9 +113,10 @@
     <div class="row-cell row-cell-label">{{$root.i18n('type')}} :</div>
     <div class="row-cell row-cell-value">
       <select ng-model="display.type">
-        <option value="favorite">{{$root.i18n('favorite')}}</option>
-        <option value="quicklink">{{$root.i18n('quicklink')}}</option>
-        <option value="evolve_view">{{$root.i18n('evolve_view')}}</option>
+        <option ng-if="!isGridLayout" value="favorite">{{$root.i18n('favorite')}}</option>
+        <option ng-if="!isGridLayout" value="quicklink">{{$root.i18n('quicklink')}}</option>
+        <option value="evolve_view">{{$root.i18n('indexPage')}}</option>
+        <option ng-if="cwApi.isSinglePageType()" value="object_view">{{$root.i18n('objectPage')}}</option>
         <option value="cw_user_view">{{$root.i18n('cw_user_view')}}</option>
         <option value="object_description">{{$root.i18n('object_description')}}</option>
         <option value="last_modified_object">{{$root.i18n('last_modified_object')}}</option>
@@ -130,4 +131,5 @@
   <div ng-if="display.type === 'last_modified_object'" ng-include src="'../../common/html/coffee/homePage_last_modified_object.ng.html'"></div>
   <div ng-if="display.type === 'links_in_bloc'" ng-include src="'../../common/html/coffee/homePage_link_in_box.ng.html'"></div>
   <div ng-if="display.type === 'carrousel'" ng-include src="'../../common/html/coffee/homePage_carrousel.ng.html'"></div>
+  <div ng-if="display.type === 'object_view'" ng-include src="'../../common/html/coffee/homePage_object_view.ng.html'"></div>
 </div>
