--- a/angularHTMLayout/coffee/homePage_object_view.ng.html
+++ b/angularHTMLayout/coffee/homePage_object_view.ng.html
@@ -1,9 +1,10 @@
 <div class="rowFlex bootstrap-iso">
   <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :&nbsp;</div>
   <div class="row-cell row-cell-value">
-    <select ng-options="v.cwView as (v.name + ' (' + v.cwView + ')')  for v in cwUser_pages | orderBy:'name'" ng-model="display.view"></select>
+    <select ng-options="v.cwView as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="display.view"></select>
   </div>
 </div>
+
 <div ng-if="display.view && getNodeNumerFromObjectView(display.view) == 1">
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-label labelTitle">{{$root.i18n('sort_by')}} :</div>
