--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -37,10 +37,16 @@
         <div class="homePage_evolveView" ng-if='display.type==="evolve_view"' ng-init="getHTMLView(display)" ng-bind-html="display.html"></div>
         <div
           class="homePage_evolveView"
-          ng-if='display.type==="cw_user_view"'
-          ng-init="getHTMLViewForCwUserView(display)"
+          ng-if='display.type==="object_view"'
+          ng-init="getHTMLViewForObjectView(display)"
           ng-bind-html="display.html"
         ></div>
+        <div
+        class="homePage_evolveView"
+        ng-if='display.type==="cw_user_view"'
+        ng-init="getHTMLViewForCwUserView(display)"
+        ng-bind-html="display.html"
+      ></div>
         <div
           class="homePage_description"
           ng-if='display.type==="object_description"'
