--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -86,6 +86,10 @@
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="display.transparent" /></div>
   </div>
   <div class="bootstrap-iso rowFlex">
+    <div class="row-cell row-cell-label">{{$root.i18n('noPadding')}} :&nbsp;</div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="display.noPadding" /></div>
+  </div>
+  <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">{{$root.i18n('fixWidth')}} :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="display.fixWidth" /></div>
   </div>
