adding option for link in box

--- a/angularHTMLayout/coffee/homePage_link_in_box.ng.html
+++ b/angularHTMLayout/coffee/homePage_link_in_box.ng.html
@@ -16,6 +16,18 @@
     <input ng-model="display.boxLinkwidth" type="text" />
   </div>
 </div>
+<div class="row bootstrap-iso">
+  <div class="row-cell row-cell-label">{{$root.i18n('homepage_image_roundshape')}} :</div>
+  <div class="row-cell row-cell-value">
+    <input ng-model="display.roundShape" type="checkbox" />
+  </div>
+</div>
+<div class="row bootstrap-iso">
+  <div class="row-cell row-cell-label">{{$root.i18n('homepage_image_fontsize')}} :</div>
+  <div class="row-cell row-cell-value">
+    <input ng-model="display.homepage_image_fontsize" />
+  </div>
+</div>
 <div class="bootstrap-iso row">
   <div class="row-cell row-cell-label">{{$root.i18n('links')}} :</div>
 </div>
