Workflow, if edit an object, it will show the other pending request

--- a/angularHTMLayout/cwWorkflow/header.ng.html
+++ b/angularHTMLayout/cwWorkflow/header.ng.html
@@ -10,3 +10,13 @@
 <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
   {{ng.scenario}} : {{ng.currentStep.label}} {{ng.otherUsers}}</span>
 </div>
+
+<div ng-if="ng.currentEditRequest && ng.currentEditRequest.length > 0" class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
+  <div>{{$root.i18n('OtherWorkflowOnTheSameItem')}} : </div>
+
+  <div ng-repeat="wf in ng.currentEditRequest">
+    <a target="_blank" href="{{wf.url}}">{{wf.name}} - {{wf.step}} ({{wf.user}})</a>
+  </div>
+
+</div>
+
